have used lombok rename DatabaseWork to DAO made DAO singleton add documentation

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.29.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
